--- a/3 - PHP and Xdebug/.vscode/launch.json
+++ b/3 - PHP and Xdebug/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch built-in server",
+            "name": "Launch built-in server and debug",
             "type": "php",
             "request": "launch",
             "runtimeArgs": [
@@ -14,25 +14,28 @@
                 "-t",
                 "."
             ],
-            "port": 9000
+            "port": 9003,
+            "serverReadyAction": {
+                "action": "openExternally"
+            }
         },
         {
-            "name": "Launch current script in console",
+            "name": "Debug current script in console",
             "type": "php",
             "request": "launch",
             "program": "${file}",
             "cwd": "${fileDirname}",
             "externalConsole": false,
-            "port": 9000
+            "port": 9003
         },
         {
             "name": "Listen for Xdebug",
             "type": "php",
             "request": "launch",
-            "port": 9000,
+            "port": [9000,9003],
             "pathMappings": {
-                "/var/www/html": "${workspaceFolder}\\3 - PHP and Xdebug\\data"
-            },
+                "/var/www/html": "${workspaceFolder}\\data"
+                }
         }
     ]
 }
