--- a/3 - PHP and Xdebug/docker-compose.yml
+++ b/3 - PHP and Xdebug/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     networks:
       - internal
     environment:
-      XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9000 remote_enable=1
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003 start_with_request=1
     volumes:
       - ./data:/var/www/html
       - /logs/php.log:/var/log/fpm-php.www.log
