Move Xdebug settings from env var to php.ini

--- a/3 - PHP and Xdebug/.vscode/launch.json
+++ b/3 - PHP and Xdebug/.vscode/launch.json
@@ -33,6 +33,7 @@
             "type": "php",
             "request": "launch",
             "port": [9000,9003],
+            "log":true,
             "pathMappings": {
                 "/var/www/html": "${workspaceFolder}\\data"
                 }
