--- a/3 - PHP and Xdebug/docker-compose.yml
+++ b/3 - PHP and Xdebug/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       dockerfile: php/Dockerfile
     networks:
       - internal
+    environment:
+      XDEBUG_MODE: debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
     volumes:
       - ./data:/var/www/html
       - /logs/php.log:/var/log/fpm-php.www.log
