dockerfile: fix logs location

--- a/2 - PHP with Nginx/docker-compose.yml
+++ b/2 - PHP with Nginx/docker-compose.yml
@@ -10,14 +10,14 @@ services:
       - internal
     volumes:
       - ./data/:/var/www/html
-      - /logs/nginx:/var/log/nginx/
+      - ./logs/nginx:/var/log/nginx/
   php:
     image: php:fpm-alpine
     networks:
       - internal
     volumes:
       - ./data/:/var/www/html
-      - /logs/php.log:/var/log/fpm-php.www.log
+      - ./logs/php.log:/var/log/fpm-php.www.log
 networks:
   internal:
     driver: bridge
